--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,8 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        buildConfigField("String", "KAKAO_ACCESS_KEY", "\"" + getKey() + "\"")
     }
 
     buildTypes {
@@ -80,4 +82,16 @@ dependencies {
 
     // swipe layout
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+
+
+    // RxJava
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.6'
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+
+    //retrofit2-rxjava2
+    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
+}
+
+def getKey() {
+    return project.findProperty("kakao_access_key")
 }
