--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,13 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
+    // RxJava
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.6'
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+
+    //retrofit2-rxjava2
+    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
+
     // ViewModel
     implementation "android.arch.lifecycle:extensions:1.1.1"
     implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.lifecycleVersion"
